Add TODOs and some files. Also added tentry point for program

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
+[x] Create Makefile
+[_] Start the entry point to the program (taking arguments and stuff)
 [_] Add a license
-[_] Create Makefile
 [_] Chose what to use to persist data. (users details...)
 [_] Implement all structures needed.
 [_] Create man page.
